[package]
name = "counter"
version = "0.1.1"
edition = "2021"

[dependencies]
stylus-sdk = "0.5.2"
mini-alloc = "0.4.2"
alloy-primitives = "0.7.6"

[dev-dependencies]
motsu = { git = "https://github.com/OpenZeppelin/rust-contracts-stylus", rev = "556c2b79cd56f249eb6435a3decf308367c1e492" }

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
std = []

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
debug = false
rpath = false
debug-assertions = false
incremental = false

[profile.dev]
panic = "abort"

[workspace]
